load(
    "@io_bazel_rules_scala//multiscala:multiscala.bzl",
    _scala_binary = "scala_binary",
    _scala_library = "scala_library",
    _scala_test = "scala_test"
)

_scala_library(
    name = "library",
    srcs = ["App.scala"],
)

_scala_binary(
    name = "app",
    main_class = "App",
    runtime_deps = [":library"],
)

_scala_test(
    name = "test",
    srcs = ["AppTest.scala"],
)

# # static example ... manaully specify toolchains. Will fail if requested toolchain is not configured.

# scala_library(
#     name = "library-static",
#     srcs = ["App.scala"],
#     toolchains = [scala_toolchain("2.12")],
# )

# java_binary(
#     name = "app-static",
#     main_class = "App",
#     runtime_deps = [":library"],
# )

# scala_test(
#     name = "test-static",
#     srcs = ["AppTest.scala"],
#     toolchains = [
#         scala_toolchain("2.12"),
#         scalatest_toolchain("2.12"),
#     ],
# )

# # dynamic examples: generated in BUILD.bzl

# build()
