load(
    "@io_bazel_rules_scala//scala:scala.bzl",
    "scala_binary",
    "scala_library",
    "scala_test",
)

# default case: builds all configured versions with version suffixes

scala_library(
    name = "library",
    srcs = glob(
        ["*.scala"],
        exclude = ["*Test.scala"],
    ),
)

scala_binary(
    name = "app",
    main_class = "App",
    runtime_deps = [":library"],
)

scala_test(
    name = "test",
    srcs = ["AppTest.scala"],
    deps = [":library"],
)
