load("//scala:scala_toolchain.bzl", "scala_toolchain")
load(
    "@bazel_tools//tools/jdk:default_java_toolchain.bzl",
    "BASE_JDK9_JVM_OPTS",
    "DEFAULT_JAVACOPTS",
    "DEFAULT_TOOLCHAIN_CONFIGURATION",
    "default_java_toolchain",
)

default_java_toolchain(
    name = "java21_toolchain",
    configuration = DEFAULT_TOOLCHAIN_CONFIGURATION,
    java_runtime = select({
        "@platforms//os:linux": "@remotejdk21_linux//:jdk",
        "@platforms//os:macos": "@remotejdk21_macos//:jdk",
        "@platforms//os:windows": "@remotejdk21_win//:jdk",
    }),
    javacopts = DEFAULT_JAVACOPTS,
    jvm_opts = BASE_JDK9_JVM_OPTS,
    source_version = "21",
    target_version = "21",
    visibility = ["//visibility:public"],
)

scala_toolchain(
    name = "ast_plus_one_deps_unused_deps_warn_impl",
    dependency_mode = "plus-one",
    dependency_tracking_method = "ast",
    unused_dependency_checker_mode = "warn",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "ast_plus_one_deps_unused_deps_warn",
    toolchain = "ast_plus_one_deps_unused_deps_warn_impl",
    toolchain_type = "//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

scala_toolchain(
    name = "ast_plus_one_deps_unused_deps_error_impl",
    dependency_mode = "plus-one",
    dependency_tracking_method = "ast",
    unused_dependency_checker_mode = "error",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "ast_plus_one_deps_unused_deps_error",
    toolchain = "ast_plus_one_deps_unused_deps_error_impl",
    toolchain_type = "//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

scala_toolchain(
    name = "ast_plus_one_deps_strict_deps_warn_impl",
    dependency_mode = "plus-one",
    dependency_tracking_method = "ast",
    strict_deps_mode = "warn",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "ast_plus_one_deps_strict_deps_warn",
    toolchain = "ast_plus_one_deps_strict_deps_warn_impl",
    toolchain_type = "//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

scala_toolchain(
    name = "ast_plus_one_deps_strict_deps_error_impl",
    dependency_mode = "plus-one",
    dependency_tracking_method = "ast",
    strict_deps_mode = "error",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "ast_plus_one_deps_strict_deps_error",
    toolchain = "ast_plus_one_deps_strict_deps_error_impl",
    toolchain_type = "//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

scala_toolchain(
    name = "high_level_transitive_deps_strict_deps_warn_impl",
    dependency_mode = "transitive",
    dependency_tracking_method = "high-level",
    strict_deps_mode = "warn",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "high_level_transitive_deps_strict_deps_warn",
    toolchain = "high_level_transitive_deps_strict_deps_warn_impl",
    toolchain_type = "//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

scala_toolchain(
    name = "high_level_transitive_deps_strict_deps_error_impl",
    dependency_mode = "transitive",
    dependency_tracking_method = "high-level",
    strict_deps_mode = "error",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "high_level_transitive_deps_strict_deps_error",
    toolchain = "high_level_transitive_deps_strict_deps_error_impl",
    toolchain_type = "//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

scala_toolchain(
    name = "high_level_direct_deps_impl",
    dependency_mode = "direct",
    dependency_tracking_method = "high-level",
    strict_deps_mode = "off",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "high_level_direct_deps",
    toolchain = "high_level_direct_deps_impl",
    toolchain_type = "//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

scala_toolchain(
    name = "enable_stats_file_disabled_toolchain_impl",
    enable_stats_file = False,
    visibility = ["//visibility:public"],
)

toolchain(
    name = "enable_stats_file_disabled_toolchain",
    toolchain = "enable_stats_file_disabled_toolchain_impl",
    toolchain_type = "//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

scala_toolchain(
    name = "use_argument_file_in_runner_impl",
    use_argument_file_in_runner = True,
    visibility = ["//visibility:public"],
)

toolchain(
    name = "use_argument_file_in_runner",
    toolchain = "use_argument_file_in_runner_impl",
    toolchain_type = "//scala:toolchain_type",
    visibility = ["//visibility:public"],
)
